add status for user
