# ent/schema/user.go
@@ -4,6 +4,7 @@ import (
 	"time"
 
 	"entgo.io/ent"
+	"entgo.io/ent/schema"
 	"entgo.io/ent/schema/edge"
 	"entgo.io/ent/schema/field"
 	"entgo.io/ent/schema/index"
@@ -12,6 +13,25 @@ import (
 // User holds the schema definition for the User entity.
 type User struct {
 	ent.Schema
+}
+
+// UserStatus defines the type for user status
+type UserStatus string
+
+// User status values.
+const (
+	UserStatusActive   UserStatus = "active"
+	UserStatusDisabled UserStatus = "disabled"
+)
+
+// Annotations of the User.
+func (User) Annotations() []schema.Annotation {
+	return []schema.Annotation{
+		// Adding this annotation to the schema enables
+		// comments for the table and all its fields.
+		// entsql.WithComments(true),
+		// schema.Comment("User table comment"),
+	}
 }
 
 // Fields of the User.
@@ -25,6 +45,9 @@ func (User) Fields() []ent.Field {
 		field.String("password").
 			NotEmpty().
 			Sensitive(), // Marks the field as sensitive, won't be printed in logs
+		field.Enum("status").
+			Values(string(UserStatusActive), string(UserStatusDisabled)).
+			Default(string(UserStatusActive)),
 		field.Time("created_at").
 			Default(time.Now),
 		field.Time("updated_at").
